service/argocd/ingress.yaml
---
# Ingress | Kubernetes API Reference:
# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.26/#ingress-v1-networking-k8s-io
# Ingress | AWS Load Balancer Controller:
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-alb
  namespace: argocd
  # Ingress annotations - AWS Load Balancer Controller
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/
  annotations:
    # Ingressが属するグループ名。同じグループを指定すると、同じALBにIngressが紐づけられます。 (デフォルトではどのグループにも属さない)
    alb.ingress.kubernetes.io/group.name: baseport-dev
    # 外部ALB (internet-facing | internal)
    # - internet-facing: インターネットに公開されるALB (kubernetes.io/role/elb=1 のタグが付与されているサブネットにALBが作成される)
    # - internal: VPC内部にのみ公開されるALB (kubernetes.io/role/internal-elb=1 のタグが付与されているサブネットにALBが作成される)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Podへのトラフィックのルーティング方法を指定
    # - instance (default): ALBからのトラフィックはNodePortを経由してPodに到達する
    # - ip: ALBからのトラフィックをClusterIPを利用して直接Podにルーティングする (EKS Fargateの場合は ip でなければならない)
    alb.ingress.kubernetes.io/target-type: ip
    # LBが利用するサブネットを指定 (通常はschemaの指定によって自動でサブネットが選択されるので不要)
    #alb.ingress.kubernetes.io/subnets: subnet-xxxxxxxxxxxxxxxxx,subnet-xxxxxxxxxxxxxxxxx,subnet-xxxxxxxxxxxxxxxxx
    alb.ingress.kubernetes.io/tags: "PROJECT=BASEPORT_PRD"
    # リスナーのポートにhttp:80とhttps:443を指定
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    # すべてのHTTPリスナーをHTTPSにリダイレクトさせる設定
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # *.dev.baseport.net の証明書
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:674582907715:certificate/e30f56be-c73d-4068-8ee7-3661d50f7447

    # ALBに設定するセキュリティグループ
    alb.ingress.kubernetes.io/security-groups: baseport-prd-IngressDev

    # ALBに追加のバックエンドsgを追加する。Node, Podのセキュリティグループはバックエンドsgからのインバウンドトラフィックを許可する。
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"

    # バックエンドプロトコルを指定 (HTTP | HTTPS)
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
    - host: argocd.dev.baseport.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
            pathType: Prefix
  # Ingress TLS: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.26/#ingresstls-v1-networking-k8s-io
  tls:
  - hosts:  # ターゲットのTLS証明書に含まれるホスト名
    - argocd.argoproj.io
